# wd-qw-dl-qwdq-wdwd

sipdah-be/: Cargo.toml  Makefile  load_test.js
sipdah-be/migrations/: 20250222150249_user.sql  20250222150304_role.sql  20250222150312_user_role.sql  20250223102602_project.sql
sipdah-be/src/: main.rs
sipdah-be/src/config/: mod.rs
sipdah-be/src/db/: mod.rs  mysql.rs  redis.rs
sipdah-be/src/internal/: mod.rs
sipdah-be/src/internal/common/: id.rs  mod.rs  response.rs  uow.rs
sipdah-be/src/internal/handler/: auth.rs  mod.rs
sipdah-be/src/internal/middleware/: auth.rs  mod.rs
sipdah-be/src/internal/model/: auth.rs  cache.rs  error.rs  file.rs  identity.rs  mod.rs  project.rs  role.rs  user.rs  web.rs
sipdah-be/src/internal/provider/: cache.rs
sipdah-be/src/internal/repository/: cache.rs  mod.rs  role.rs  user.rs
sipdah-be/src/internal/router/: auth.rs  mod.rs  project.rs  role.rs  user.rs
sipdah-be/src/internal/service/: auth.rs  mod.rs  role.rs  user.rs
sipdah-be/uow_macro/: Cargo.toml
sipdah-be/uow_macro/src/: lib.rs
sipdah-web/: .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
sipdah-web/src/: index.css  main.tsx  router-config.tsx  type.d.ts
sipdah-web/src/components/ui/: button.tsx  form.tsx
sipdah-web/src/data/: auth-hooks.ts  auth-service.ts  common.ts  user-hooks.ts  user-service.ts
sipdah-web/src/lib/: axios.ts  cookie.ts
sipdah-web/src/pages/auth/: signin-page.tsx  signup-page.tsx
sipdah-web/src/pages/auth/components/: signin-form.tsx  signup-form.tsx
sipdah-web/src/pages/landing/: landing-page.tsx
sipdah-web/src/pages/landing/components/: about.tsx  cta.tsx  features.tsx  footer.tsx  hero-cards.tsx  hero.tsx  how-it-works.tsx  mode-toggle.tsx  navbar.tsx  (+7 more)
sipdah-web/src/pages/profile/: profile-page.tsx
(+1 files in other folders)
