[package]
name = "sipdah-be"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.6", features = ["v7"] }
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.17.0"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
jsonwebtoken = "9.3.1"
axum = { version = "0.8.1", features = ["ws", "macros", "multipart"] }
tower = "0.5.1"
uow_macro = { path = "./uow_macro" }
axum-extra = { version = "0.10.0", features = ["cookie"] }
redis = "0.29.0"
deadpool-redis = "0.19.0"
